crates/ir/tests/ir/snapshots/main__ir__lower__traits__js_intrinsic_add.snap
---
source: crates/ir/tests/ir/lower.rs
expression: ir_module.to_string()
---
module traits__js_intrinsic_add

import core/peek/peek as peek(e) -> e
import core/list/last as last(List[q3]) -> Option[q3]
import core/list/sort_by as sort_by(List[v5], (v5) -> k5) -> List[v5]
import core/list/filter as filter(List[g1], (g1) -> Bool) -> List[g1]
import core/list/fold as fold(List[t1], v1, (v1, t1) -> v1) -> v1
import core/list/map as map(List[v], (v) -> x) -> List[x]
import core/vec/to_list as to_list(Vec[y7]) -> List[y7]
import core/io/println as println(h) -> Unit
import core/option/Some as Some(c) -> Option[c]
import core/result/Ok as Ok(e) -> Result[d, e]
import core/result/Err as Err(d) -> Result[d, e]
import core/list/Cons as Cons(f, List[f]) -> List[f]
declare println: (h) -> Unit

fn main() -> Unit =
  let v1: Int = add_int(1, 2)
  let v0: Dict[core/show.Show, Int] = get_dict core/show.Show[Int]
  let v2: Unit = call println(v0, v1)
  v2
