crates/ir/tests/ir/snapshots/main__ir__lower__traits__method_where_satisfied.snap
---
source: crates/ir/tests/ir/lower.rs
expression: ir_module.to_string()
---
module traits__method_where_satisfied

trait Default[k8] { default(): k8 }
trait R[l8] { lol(l8[m8]): l8[m8] }
instance traits__method_where_satisfied.Default[Int] { default=Default$$Int$$default }
instance traits__method_where_satisfied.R[List] { lol=R$$List$$lol }
import core/peek/peek as peek(e) -> e
import core/list/last as last(List[r3]) -> Option[r3]
import core/list/sort_by as sort_by(List[w5], (w5) -> l5) -> List[w5]
import core/list/filter as filter(List[g1], (g1) -> Bool) -> List[g1]
import core/list/fold as fold(List[t1], v1, (v1, t1) -> v1) -> v1
import core/list/map as map(List[v], (v) -> x) -> List[x]
import core/vec/to_list as to_list(Vec[z7]) -> List[z7]
import core/io/println as println(h) -> Unit
import core/option/Some as Some(c) -> Option[c]
import core/result/Ok as Ok(e) -> Result[d, e]
import core/result/Err as Err(d) -> Result[d, e]
import core/list/Cons as Cons(f, List[f]) -> List[f]
declare println: (h) -> Unit

fn main() -> Unit =
  let v2: ~List[t8] = construct List::Nil#1()
  let v3: ~List[Int] = construct List::Cons#0(1, v2)
  let v4: Dict[traits__method_where_satisfied.R, List] = get_dict traits__method_where_satisfied.R[List]
  let v5: Dict[traits__method_where_satisfied.Default, Int] = get_dict traits__method_where_satisfied.Default[Int]
  let v6: List[Int] = trait_call traits__method_where_satisfied.R.lol(v4, v5, v3)
  let v0: Dict[core/show.Show, Int] = get_dict core/show.Show[Int]
  let v1: Dict[core/show.Show, List[Int]] = make_dict core/show.Show[List[Int]](v0)
  let v7: Unit = call println(v1, v6)
  v7

fn Default$$Int$$default() -> ~Int =
  0

fn R$$List$$lol(v8: Dict[traits__method_where_satisfied.Default, m8], v9: List[m8]) -> ~List[m8] =
  let v10: m8 = trait_call traits__method_where_satisfied.Default.default(v8)
  let v11: ~List[m8] = construct List::Cons#0(v10, v9)
  v11
