crates/ir/tests/ir/snapshots/main__ir__lower__traits__monoid_empty.snap
---
source: crates/ir/tests/ir/lower.rs
expression: ir_module.to_string()
---
module traits__monoid_empty

trait Monoid[i8] { empty(): i8; combine(i8, i8): i8 }
instance traits__monoid_empty.Monoid[Int] { empty=Monoid$$Int$$empty, combine=Monoid$$Int$$combine }
import core/peek/peek as peek(d) -> d
import core/list/last as last(List[p3]) -> Option[p3]
import core/list/sort_by as sort_by(List[u5], (u5) -> j5) -> List[u5]
import core/list/filter as filter(List[f1], (f1) -> Bool) -> List[f1]
import core/list/fold as fold(List[s1], u1, (u1, s1) -> u1) -> u1
import core/list/map as map(List[u], (u) -> w) -> List[w]
import core/vec/to_list as to_list(Vec[x7]) -> List[x7]
import core/io/println as println(g) -> Unit
import core/option/Some as Some(b) -> Option[b]
import core/result/Ok as Ok(d) -> Result[c, d]
import core/result/Err as Err(c) -> Result[c, d]
import core/list/Cons as Cons(e, List[e]) -> List[e]
declare println: (g) -> Unit

fn apply_thunk(v0: () -> Int) -> Int =
  let v1: Int = call_closure v0()
  v1

fn main() -> Unit =
  let v2: Dict[traits__monoid_empty.Monoid, Int] = get_dict traits__monoid_empty.Monoid[Int]
  let v3: Int = trait_call traits__monoid_empty.Monoid.empty(v2)
  let v4: Dict[core/show.Show, Int] = get_dict core/show.Show[Int]
  let v5: Unit = call println(v4, v3)
  let v6: Dict[traits__monoid_empty.Monoid, Int] = get_dict traits__monoid_empty.Monoid[Int]
  let v7: Int = trait_call traits__monoid_empty.Monoid.empty(v6)
  let v8: Dict[traits__monoid_empty.Monoid, Int] = get_dict traits__monoid_empty.Monoid[Int]
  let v9: Int = trait_call traits__monoid_empty.Monoid.combine(v8, v7, 1)
  let v10: Dict[core/show.Show, Int] = get_dict core/show.Show[Int]
  let v11: Unit = call println(v10, v9)
  let v13: Dict[traits__monoid_empty.Monoid, Int] = get_dict traits__monoid_empty.Monoid[Int]
  let v16: () -> Int = make_closure(trait_ref$29, [v13])
  let v17: Int = call apply_thunk(v16)
  let v12: Dict[core/show.Show, Int] = get_dict core/show.Show[Int]
  let v18: Unit = call println(v12, v17)
  v18

fn Monoid$$Int$$empty() -> Int =
  0

fn Monoid$$Int$$combine(v19: Int, v20: Int) -> Int =
  let v21: Int = add_int(v19, v20)
  v21

fn trait_ref$29(v14: Dict[traits__monoid_empty.Monoid, Int]) -> Int =
  let v15: Int = trait_call traits__monoid_empty.Monoid.empty(v14)
  v15
