crates/ir/tests/ir/snapshots/main__ir__lower__traits__multi_constraint.snap
---
source: crates/ir/tests/ir/lower.rs
expression: ir_module.to_string()
---
module traits__multi_constraint

struct Box { val: Int }
instance core/eq.Eq[Box] { eq=Eq$$Box$$eq }
instance core/show.Show[Box] { show=Show$$Box$$show }
import core/peek/peek as peek(d) -> d
import core/list/last as last(List[f3]) -> Option[f3]
import core/list/sort_by as sort_by(List[k5], (k5) -> z4) -> List[k5]
import core/list/filter as filter(List[g1], (g1) -> Bool) -> List[g1]
import core/list/fold as fold(List[t1], u1, (u1, t1) -> u1) -> u1
import core/list/map as map(List[v], (v) -> x) -> List[x]
import core/vec/to_list as to_list(Vec[q10]) -> List[q10]
import core/io/println as println(g) -> Unit
import core/option/Some as Some(b) -> Option[b]
import core/result/Ok as Ok(d) -> Result[c, d]
import core/result/Err as Err(c) -> Result[c, d]
import core/list/Cons as Cons(e, List[e]) -> List[e]
declare println: (g) -> Unit

fn eq_and_show(v0: Dict[core/eq.Eq, c11], v1: Dict[core/show.Show, c11], v2: c11, v3: c11) -> String =
  let v4: Bool = trait_call core/eq.Eq.eq(v0, v2, v3)
  if v4 {
    let v5: String = trait_call core/show.Show.show(v1, v2)
    v5
  } else {
    "not equal"
  }

fn main() -> Unit =
  let_join v16(v14: Bool) =
    let v6: Dict[core/show.Show, Bool] = get_dict core/show.Show[Bool]
    let v15: Unit = call println(v6, v14)
    v15
  in
  let v7: Dict[core/eq.Eq, String] = get_dict core/eq.Eq[String]
  let v8: Box = construct Box(1)
  let v9: Box = construct Box(1)
  let v10: Dict[core/eq.Eq, Box] = get_dict core/eq.Eq[Box]
  let v11: Dict[core/show.Show, Box] = get_dict core/show.Show[Box]
  let v12: String = call eq_and_show(v10, v11, v8, v9)
  let v13: Bool = trait_call core/eq.Eq.eq(v7, v12, "Box")
  jump v16(v13)

fn Eq$$Box$$eq(v17: Box, v18: Box) -> Bool =
  let v19: Dict[core/eq.Eq, Int] = get_dict core/eq.Eq[Int]
  let v20: Int = project v17.0
  let v21: Int = project v18.0
  let v22: Bool = trait_call core/eq.Eq.eq(v19, v20, v21)
  v22

fn Show$$Box$$show(v23: Box) -> String =
  "Box"
