crates/ir/tests/ir/snapshots/main__ir__lower__traits__multi_param_basic.snap
---
source: crates/ir/tests/ir/lower.rs
expression: ir_module.to_string()
---
module traits__multi_param_basic

trait Convert[y10] { convert(y10): z10 }
instance traits__multi_param_basic.Convert[Int$$String] { convert=Convert$$Int$$String$$convert }
import core/peek/peek as peek(d) -> d
import core/list/last as last(List[n3]) -> Option[n3]
import core/list/sort_by as sort_by(List[s5], (s5) -> h5) -> List[s5]
import core/list/filter as filter(List[f1], (f1) -> Bool) -> List[f1]
import core/list/fold as fold(List[s1], t1, (t1, s1) -> t1) -> t1
import core/list/map as map(List[u], (u) -> w) -> List[w]
import core/vec/to_list as to_list(Vec[n10]) -> List[n10]
import core/io/println as println(g) -> Unit
import core/option/Some as Some(b) -> Option[b]
import core/result/Ok as Ok(d) -> Result[c, d]
import core/result/Err as Err(c) -> Result[c, d]
import core/list/Cons as Cons(e, List[e]) -> List[e]
declare println: (g) -> Unit

fn main() -> Unit =
  let v1: Dict[traits__multi_param_basic.Convert, Int, String] = get_dict traits__multi_param_basic.Convert[Int, String]
  let v0: String = trait_call traits__multi_param_basic.Convert.convert(v1, 42)
  let v2: Dict[core/show.Show, String] = get_dict core/show.Show[String]
  let v3: Unit = call println(v2, v0)
  v3

fn Convert$$Int$$String$$convert(v4: Int) -> String =
  "hi-42"
