crates/ir/tests/ir/snapshots/main__ir__lower__traits__multi_param_constrained_fn_return_only.snap
---
source: crates/ir/tests/ir/lower.rs
expression: ir_module.to_string()
---
module traits__multi_param_constrained_fn_return_only

trait Make[l12] { make(l12): m12 }
instance traits__multi_param_constrained_fn_return_only.Make[Int$$String] { make=Make$$Int$$String$$make }
import core/peek/peek as peek(d) -> d
import core/list/last as last(List[i4]) -> Option[i4]
import core/list/sort_by as sort_by(List[n6], (n6) -> c6) -> List[n6]
import core/list/filter as filter(List[h1], (h1) -> Bool) -> List[h1]
import core/vec/to_list as to_list(Vec[a12]) -> List[a12]
import core/io/println as println(g) -> Unit
import core/option/Some as Some(b) -> Option[b]
import core/result/Ok as Ok(d) -> Result[c, d]
import core/result/Err as Err(c) -> Result[c, d]
import core/list/Cons as Cons(e, List[e]) -> List[e]
declare println: (g) -> Unit

fn wrap(v0: Dict[traits__multi_param_constrained_fn_return_only.Make, o12, t12], v1: o12) -> t12 =
  let v2: t12 = trait_call traits__multi_param_constrained_fn_return_only.Make.make(v0, v1)
  v2

fn main() -> Unit =
  let v4: Dict[traits__multi_param_constrained_fn_return_only.Make, Int, String] = get_dict traits__multi_param_constrained_fn_return_only.Make[Int, String]
  let v3: String = call wrap(v4, 42)
  let v5: Dict[core/show.Show, String] = get_dict core/show.Show[String]
  let v6: Unit = call println(v5, v3)
  v6

fn Make$$Int$$String$$make(v7: Int) -> String =
  "n"
